[package]
name = "iostest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test=false
crate-type = ["rlib", "dylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "libtest"
path = "src/bin/main.rs"

[dependencies]
uniffi = "^0.21"
uniffi_macros = "^0.21"

[build-dependencies]
uniffi_build = { version = "^0.21", features = [ "builtin-bindgen" ]}
